Fixed buttons background contrast

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -5,7 +5,7 @@
   width: 280px;
   height: 65px;
   padding-bottom: 6px; /* to center petite caps text */
-  background: #e67e22;
+  background: #e47527;
   font-family: var(--sub-font);
   font-size: 25px;
   font-weight: 600;
